--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ section {
   padding-right: 2rem;
   padding-left: 2rem;
   margin-bottom: 30vh;
+  scroll-margin: 30rem;
 }
 
 /*----------- NAVIGATION BAR -----------*/
@@ -197,6 +198,7 @@ section {
 
 .aboutme_title {
   font-size: 3rem;
+  margin-bottom: 1rem;
 }
 
 .aboutme_desciption {
@@ -231,8 +233,17 @@ section {
   width: 100%;
   background-color: #8fcb9b;
   border-right: #8fcb9b solid 0.5rem;
+  height: 53rem;
+}
 
-  height: 50rem;
+.aboutme_icon {
+  cursor: pointer;
+  width: 30px;
+  height: 48px;
+}
+
+.aboutme_icon--active {
+  width: 48px;
 }
 
 /*----------- Embedded Software Engineering & Web Development Section CSS----------*/
@@ -304,6 +315,28 @@ section {
   height: 52rem;
 }
 
+.project_grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+  border-left: #8fcb9b solid 0.5rem;
+  border-bottom-left-radius: 2rem;
+  border-top-left-radius: 2rem;
+  padding: 1.5rem;
+}
+
+.project_tile {
+  width: 100%;
+  height: 35rem;
+}
+
+.tile1 {
+  background-color: #8fcb9b;
+}
+
+.tile2 {
+  background-color: #ffffff;
+}
 /*----------- Scroll Indicator ----------*/
 .scroll_container {
   position: fixed;
@@ -374,7 +407,7 @@ section {
   width: 50%;
   background-color: white;
   box-shadow: 0 0 1rem #8fcb9b;
-  z-index: 10;
+  z-index: 300;
   height: 55rem;
   display: flex;
   justify-content: center;
@@ -388,7 +421,7 @@ section {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(0.5px);
-  z-index: 5;
+  z-index: 200;
 }
 .contactme-form {
   padding: 4rem;
