--- a/css/styles.css
+++ b/css/styles.css
@@ -26,13 +26,14 @@ h1 {
 h2 {
   font-family: "Merriweather", sans-serif;
   font-weight: 700;
-  font-size: 2rem;
+  font-size: 2.4rem;
   color: #ffffff;
 }
 
 h3 {
   font-family: "Merriweather", sans-serif;
   color: #ffffff;
+  font-size: 2rem;
 }
 
 p {
@@ -51,6 +52,13 @@ span {
   color: #8fcb9b;
 }
 
+ul {
+  font-size: 2rem;
+}
+
+li {
+  font-size: 2rem;
+}
 footer {
   text-align: center;
   padding: 7rem;
@@ -222,16 +230,10 @@ section {
   font-size: 2rem;
 }
 
-.skill_list {
-  list-style-type: circle;
-}
-
 .list_title {
-  font-size: 2rem;
   margin-bottom: 1rem;
 }
 .skill_item {
-  font-size: 2rem;
   color: #8fcb9b;
 }
 
@@ -267,7 +269,7 @@ section {
   border-top-left-radius: 2rem;
 }
 
-.project_container {
+.capstone_project_container {
   display: flex;
   gap: 1rem;
   margin-bottom: 10rem;
@@ -321,27 +323,45 @@ section {
   height: 52rem;
 }
 
-.project_grid {
+/*----------- Additional Projects Containers  -----------*/
+.additional_projects_section {
+}
+
+.projects_container {
+  margin-top: 6rem;
+  padding: 2rem;
+  border-left: #8fcb9b 0.5rem solid;
+  border-right: #8fcb9b 0.5rem solid;
+  border-radius: 2rem;
+}
+
+.requirements_heading {
+  color: #8fcb9b;
+  margin-top: 1rem;
+}
+.requirements_list {
+  color: #ffffff;
+  display: flex;
+  justify-content: space-between;
+}
+
+.requirement_item {
+  color: #ffffff;
+}
+
+.project_tile_container {
   display: grid;
+  margin-top: 2rem;
+
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 1rem;
-  border-left: #8fcb9b solid 0.5rem;
-  border-bottom-left-radius: 2rem;
-  border-top-left-radius: 2rem;
-  padding: 1.5rem;
+  gap: 2rem;
 }
-
 .project_tile {
-  width: 100%;
-  height: 35rem;
-}
+  border: #8fcb9b 0.3rem solid;
+  padding: 2rem;
+  border-radius: 2rem;
 
-.tile1 {
-  background-color: #8fcb9b;
-}
-
-.tile2 {
-  background-color: #ffffff;
+  text-align: center;
 }
 /*----------- Scroll Indicator ----------*/
 .scroll_container {
@@ -528,7 +548,7 @@ section {
   }
 }
 
-@keyframes changeOpacity {
+@keyframes fadeIn {
   from {
     opacity: 0;
   }
@@ -560,10 +580,29 @@ section {
   }
 }
 
+@keyframes fadeUp {
+  0% {
+    transform: translateY(150px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
 .fadeLeftAnimate {
   animation: fadeLeft 1s ease-in;
 }
 
 .fadeRightAnimate {
   animation: fadeRight 1s ease-in;
+}
+
+.fadeUpAnimate {
+  animation: fadeUp 1s ease-in;
+}
+
+.fadeInAnimate {
+  animation: fadeIn 1.5s ease-in;
 }
